hcl-13 - Fixed layout issue with Identity pages

--- a/src/Web/wwwroot/css/site.css
+++ b/src/Web/wwwroot/css/site.css
@@ -139,6 +139,10 @@ body {
         width: 700px;
     }
 
+.identityFeatures {
+    padding : 50px
+}
+
 .leftContentColumn {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
